manifests/homeassistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
  namespace: homeassistant
spec:
  clusterIP: None        # headless service
  ports:
    - port: 8123
      targetPort: 8123
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: homeassistant
  namespace: homeassistant
  labels:
    kubernetes.io/service-name: homeassistant
addressType: IPv4
ports:
  - port: 8123
    protocol: TCP
endpoints:
  - addresses:
      - 10.0.2.4
