manifests/homeassistant/ingressroute.yaml
# manifests/homeassistant/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homeassistant
  namespace: homeassistant
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`homeassist.smeyer.ca`)
      kind: Rule
      services:
        - name: homeassistant
          port: 8123
